apps/tad/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dpl
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: tad
    spec:
      automountServiceAccountToken: false
      containers:
        - image: tad-image
          name: tad
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          livenessProbe:
            initialDelaySeconds: 20
            httpGet:
              path: /health/live
              port: 8000
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8000
      imagePullSecrets:
        - name: minbzk-registry
