apps/tad/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app: tad
  type: ClusterIP
